--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ coverage
 
 .nyc_output
 
+#drizzle
+drizzle
+db.sqlite
+
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 
 .grunt
