--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "todoapi",
   "module": "index.ts",
   "type": "module",
-  "scripts":{
-    "start":"bun run src/index.ts",
-    "build":"tsc",
-    "format" :"prettier --write 'scr/**/*.{ts,js,json,md}'"
+  "scripts": {
+    "start": "bun run src/index.ts",
+    "build": "tsc",
+    "format": "prettier --write 'scr/**/*.{ts,js,json,md}'",
+    "db:generate":"bunx drizzle-kit generate",
+    "db:migrate":"bun run ./src/db/migration.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
@@ -22,6 +25,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "drizzle-orm": "^0.33.0",
     "hono": "^4.6.2"
   }
 }
