--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "bun run src/index.ts",
     "build": "tsc",
     "format": "prettier --write 'scr/**/*.{ts,js,json,md}'",
-    "db:generate":"bunx drizzle-kit generate",
-    "db:migrate":"bun run ./src/db/migration.ts"
+    "db:generate": "bunx drizzle-kit generate",
+    "db:migrate": "bun run ./src/db/migration.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
     "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
@@ -25,7 +26,11 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.33.0",
-    "hono": "^4.6.2"
+    "hono": "^4.6.2",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
